# crypto-ta

./: crypto-ta.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  MACD.hs  Prices.hs  Types.hs
src/Exchange/: Binance.hs
test/: Spec.hs
