name:                crypto-ta
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/crypto-ta#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , MACD
                     , Exchange.Binance
                     , Prices
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blank-canvas
                     , Chart
                     , Chart-diagrams
                     , diagrams-canvas
                     , diagrams-lib
                     , http-client
                     , http-client-tls
                     , QuickCheck
                     , servant
                     , servant-client
                     , servant-server
                     , talib
                     , text
                     , time
                     , universum
                     , vector
                     , wai
                     , warp
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  default-extensions:  DeriveFunctor
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       NoImplicitPrelude
                       OverloadedLists
                       OverloadedStrings
                       PartialTypeSignatures
                       RecordWildCards
                       ScopedTypeVariables
                       TupleSections

executable crypto-ta-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , crypto-ta
                     , universum
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

test-suite crypto-ta-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , crypto-ta
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/crypto-ta
